add cascading styles, borders, margin

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 <body>
   <h1>Animal Shelter</h1>
   <h2>Animals Available:</h2>
-  <div class= "cheetah">
+  <div class= "animals">
     <img src="img/cheetah.jpg" alt="a picture of a cheetah">
     <h3>Smokey the Cheetah</h3>
     <p>This cheetah is a very ill-tempered beast. Although he has some issues, he is actually a sweetheart. The buyer of this animal will surely fall in love. Cheetahs are hard to come by, but once you get one of your own, you will be obsessed. They are really beautiful and fast animals, although they have a bit of an aggression issue. Please be kind to this animal if you adopt, or else you will pay the price.</p>
   </div>
-  <div class= "bear">
+  <div class= "animals">
     <img src="img/bear.jpg" alt="a picture of a bear">
     <h3>Chubs the Bear</h3>
     <p>Chubs is a charming black bear from the wilderness of Alaska. He is friendly, but if you irritate him when he's hungry, he will definitely attack you. He gets along with other animals, but don't bring him near your children, because he is a bear and will probably hurt them. This exotic pet is to be taken seriously at all costs. </p>
   </div>
-  <div class= "snake">
+  <div class= "animals">
     <img src="img/snake.jpg" alt="a picture of a snake">
     <h3>Slither the Snake</h3>
     <p>Slither is a very good pet, with a great personality. You can feed him pretty much whatever you want. He prefers to live outdoors, although a cage will do just fine. This is probably the cheapest pet to adopt, but beware: he is literally a dangerous animal and will probably try to bite you. </p>
